--- a/Media/CameraApp/CameraApp/Views/MainPage.xaml
+++ b/Media/CameraApp/CameraApp/Views/MainPage.xaml
@@ -1,24 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            xmlns:views="clr-namespace:CameraApp.Views"
-            x:Class="CameraApp.Views.MainPage">
+<TabbedPage
+    x:Class="CameraApp.Views.MainPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:CameraApp.Views"
+    >
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
+        <NavigationPage
+            Title="Browse"
+            >
             <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
+                <OnPlatform
+                    x:TypeArguments="FileImageSource"
+                    >
+                    <On
+                        Platform="iOS"
+                        Value="tab_feed.png"
+                        />
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
                 <views:ItemsPage />
             </x:Arguments>
         </NavigationPage>
-        
-        <NavigationPage Title="About">
+        <NavigationPage
+            Title="Settings"
+            >
+            <x:Arguments>
+                <views:Settings />
+            </x:Arguments>
+        </NavigationPage>
+        <NavigationPage
+            Title="About"
+            >
             <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
+                <OnPlatform
+                    x:TypeArguments="FileImageSource"
+                    >
+                    <On
+                        Platform="iOS"
+                        Value="tab_about.png"
+                        />
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
