--- a/Media/CameraApp/CameraApp/Views/Camera.xaml
+++ b/Media/CameraApp/CameraApp/Views/Camera.xaml
@@ -4,37 +4,19 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:vm="clr-namespace:CameraApp.ViewModels;"
-    Title="{Binding Title}"
-    >
+    Title="{Binding Title}">
     <ContentPage.BindingContext>
         <vm:CameraViewModel />
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout
-                Padding="10"
-                Spacing="10"
-                >
-                <Button
-                    x:Name="takePhoto"
-                    Text="Take Photo"
-                    />
-                <Button
-                    x:Name="pickPhoto"
-                    Text="Pick Photo"
-                    />
-                <Button
-                    x:Name="takeVideo"
-                    Text="Take Video"
-                    />
-                <Button
-                    x:Name="pickVideo"
-                    Text="Pick Video"
-                    />
+            <StackLayout Padding="10" Spacing="10">
+                <Button x:Name="takePhoto" Text="Take Photo" />
+                <Button x:Name="pickPhoto" Text="Pick Photo" />
+                <Button x:Name="takeVideo" Text="Take Video" />
+                <Button x:Name="pickVideo" Text="Pick Video" />
 
-                <Image
-                    x:Name="image"
-                    />
+                <Image x:Name="image" />
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
