--- a/Media/CameraApp/CameraApp/Views/MainPage.xaml
+++ b/Media/CameraApp/CameraApp/Views/MainPage.xaml
@@ -3,39 +3,42 @@
     x:Class="CameraApp.Views.MainPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:CameraApp.Views"
-    >
+    xmlns:views="clr-namespace:CameraApp.Views">
     <TabbedPage.Children>
-        <NavigationPage
-            Title="Camera"
-            >
+        <NavigationPage Title="Camera">
             <x:Arguments>
                 <views:Camera />
             </x:Arguments>
         </NavigationPage>
-        <NavigationPage
-            Title="Settings"
-            >
+
+        <NavigationPage Title="Location">
+            <x:Arguments>
+                <views:Location />
+            </x:Arguments>
+        </NavigationPage>
+
+        <NavigationPage Title="Barcode reader">
+            <x:Arguments>
+                <views:Barcode />
+            </x:Arguments>
+        </NavigationPage>
+
+        <NavigationPage Title="Settings">
             <x:Arguments>
                 <views:Settings />
             </x:Arguments>
         </NavigationPage>
-        <NavigationPage
-            Title="About"
-            >
+
+        <NavigationPage Title="About">
             <NavigationPage.Icon>
-                <OnPlatform
-                    x:TypeArguments="FileImageSource"
-                    >
-                    <On
-                        Platform="iOS"
-                        Value="tab_about.png"
-                        />
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_about.png" />
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
                 <views:AboutPage />
             </x:Arguments>
         </NavigationPage>
+
     </TabbedPage.Children>
 </TabbedPage>
