Fixing MapsViewModel and adding a binding between pin at MapsViewModel and Pin.

--- a/Media/CameraApp/CameraApp/Views/MainPage.xaml
+++ b/Media/CameraApp/CameraApp/Views/MainPage.xaml
@@ -23,7 +23,7 @@
         </NavigationPage>
 
         <NavigationPage
-            Title="Maps"
+            Title="MapsViewModel"
             >
             <x:Arguments>
                 <views:Maps />
